# luma

./: Cargo.toml  icon.icns  luma_chess.icns
src/: engine.rs  gui.rs  main.rs
src/bitboard/: mod.rs  tests.rs
src/check/: mod.rs  tests.rs
src/chess_moves/: mod.rs  tests.rs
src/directions/: mod.rs  tests.rs
src/engine/: cache.rs  check.rs  chess_moves.rs  directions.rs  evaluation.rs  heuristic.rs  minimax.rs  mod.rs  piece.rs  position.rs  search_algorithms.rs  tests.rs
src/engine/check/: mod.rs  tests.rs
src/engine/chess_moves/: castling.rs  common.rs  configurations.rs  mod.rs  pawn.rs  tests.rs
src/engine/directions/: mod.rs  squares.rs  tests.rs
src/engine/evaluation/: mobility.rs  mod.rs  pawn_structures.rs  squares.rs  tests.rs
src/engine/heuristic/: material.rs  mobility.rs  mod.rs  pawn_structures.rs  squares.rs  tests.rs
src/engine/minimax/: chess_impl.rs  mod.rs  tests.rs
src/engine/position/: bitboard.rs  mod.rs  print.rs  tests.rs
src/engine/search_algorithms/: alpha_beta.rs  (+3 more)
src/evaluation/: mod.rs  tests.rs
src/game/: mod.rs
src/gui/: algebraic_notation.rs  assets.rs  chess_board_canvas.rs  chess_board_model.rs  configuration.rs  coordinate_mapper.rs  draw_functions.rs  fen.rs  game.rs  icon.rs  menu.rs  mod.rs  state_machine.rs  ui_board.rs  ui_button.rs  ui_container.rs  ui_element.rs  ui_game.rs  ui_layout.rs  ui_menu.rs  ui_piece.rs  ui_square.rs
src/king/: mod.rs  tests.rs
src/minimax/: tests.rs
src/piece/: mod.rs
src/position/: mod.rs  print.rs  tests.rs
src/possible_moves/: configurations.rs  mod.rs  tests.rs
(+33 files in other folders)
