[package]
name = "luma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intbits = "0.2.0"
flo_canvas = "0.3.1"
flo_curves = "0.7.2"
flo_draw = "0.3.1"
flo_stream = "0.7.0"
futures = "0.3.30"
futures-timer = "3.0.2"
futures-util = "0.3.30"
rand = "0.9.2"
once_cell = "1.21.3"

